added responsive search bar (non-functional for now)

--- a/server/search/search.html
+++ b/server/search/search.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="search.css">
 </head>
 <body>
+<header>
+    <div class="search-bar">
+        <input id="search" type="search" placeholder="&#x1F50D" />
+    </div>
+</header>
 
+<main class="container">
+    <div class="search-display"></div>
+</main>
 </body>
 </html>
