--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/client/base.css">
     <link rel="stylesheet" href="home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,10 +12,10 @@
 </head>
 <body>
 <header>
-    <img src="../../../images/pepe.png" alt="LiquorLoom Logo" class="logo">
+    <img src="../../images/pepe.png" alt="LiquorLoom Logo" class="logo">
     <button id="login-btn">Login</button>
     <button id="sign-up-btn">Sign Up</button>
-    <img src="../../../images/pepe.png" alt="Profile Picture" class="profile-picture">
+    <img src="../../images/pepe.png" alt="Profile Picture" class="profile-picture">
 </header>
 </body>
 </html>
