added search-bar to home.html

--- a/client/search/search.html
+++ b/client/search/search.html
@@ -1,19 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
     <link rel="stylesheet" href="search.css">
+    <title></title>
 </head>
-<body>
-<header>
-    <div class="search-bar">
-        <input id="search" type="search" placeholder="&#x1F50D" />
-    </div>
-</header>
 
-<main class="container">
-    <div class="search-display"></div>
-</main>
-</body>
-</html>
+<div class="search-bar">
+    <input id="search" type="search" placeholder="&#x1F50D" />
+</div>
