--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -6,20 +6,16 @@
     <title>Home</title>
     <link rel="stylesheet" href="/client/base.css">
     <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="/client/search/search.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
-    <img src="../../images/pepe.png" alt="LiquorLoom Logo" class="logo">
-    <div id="searchBarContainer">
-        <iframe src="../../search/search.html" width="100%" height="300px" frameborder="0"></iframe>
-    </div>
-    <button id="login-btn">Login</button>
-    <button id="sign-up-btn">Sign Up</button>
-    <img src="../../images/pepe.png" alt="Profile Picture" class="profile-picture">
+    <img src="../../images/pepe.png" alt="LiquorLoom Logo" class="logo" >
+    <iframe src="../../search/search.html" class="search-frame"> </iframe>
+    <button id="login-btn" class="button" >LOGIN</button>
+    <img src="../../images/profile_picture.png" alt="Profile Picture" class="profile-picture">
 </header>
 </body>
 </html>
