Working on home page

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 <header>
-    <img src="../../images/pepe.png" alt="LiquorLoom Logo" class="logo" >
+    <img src="../../images/logo.png" alt="LiquorLoom Logo" class="logo" >
     <iframe src="../../search/search.html" class="search-frame"> </iframe>
     <button id="login-btn" class="button" >LOGIN</button>
-    <img src="../../images/profile_picture.png" alt="Profile Picture" class="profile-picture">
+    <img src="../../images/profile_picture_empty.png" alt="Profile Picture" class="profile-picture">
 </header>
 </body>
 </html>
