--- a/client/search/search.html
+++ b/client/search/search.html
@@ -1,8 +1,10 @@
 <head>
     <link rel="stylesheet" href="search.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title></title>
 </head>
-
 <div class="search-bar">
-    <input id="search" type="search" placeholder="&#x1F50D" />
+    <label for="search"></label><input id="search" type="search"/>
 </div>
