--- a/client/pages/login/login.html
+++ b/client/pages/login/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login - LiquorLoom</title>
+    <link rel="icon" type="image/png" href="../../images/logo_small_black.png">
 </head>
 <body>
 <label id="text">This is my login page!</label>
