--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Recipe - LiquorLoom</title>
+    <link rel="icon" type="image/png" href="../../images/logo_small_black.png">
 </head>
 <body>
 <label id="recipe">This is my recipe page</label>
