working on advanced search

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -17,5 +17,48 @@
     <button id="login-btn" class="button" >LOGIN</button>
     <img src="../../images/profile_picture_empty.png" alt="Profile Picture" class="profile-picture">
 </header>
+
+<div class="container">
+    <div class="advanced-search">
+        <h3>ADVANCED SEARCH</h3>
+        <div class="filter-section">
+            <label>Categories</label>
+            <div class="tags">
+                <span class="tag">vodka</span>
+                <span class="tag">whiskey</span>
+                <span class="tag">beer</span>
+                <span class="tag">gin</span>
+                <span class="tag">wine</span>
+                <span class="tag">...</span>
+            </div>
+        </div>
+        <div class="filter-section">
+            <label>Ingredients</label>
+            <div class="tags">
+                <span class="tag">lime</span>
+                <span class="tag">cherry</span>
+                <span class="tag">orange</span>
+                <span class="tag">sugar</span>
+                <span class="tag">salt</span>
+                <span class="tag">...</span>
+            </div>
+        </div>
+        <div class="filter-section">
+            <label>Rating</label>
+            <input type="range" min="3.5" max="5.0" step="0.1">
+        </div>
+        <div class="filter-section">
+            <label>Sort by</label>
+            <div class="sort-options">
+                <span class="sort-option">asc</span>
+                <span class="sort-option">desc</span>
+                <span class="sort-option">trending</span>
+                <span class="sort-option">top rated</span>
+                <span class="sort-option">most popular</span>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
