added basic login function and redirection to /login if the login button on /home is pressed

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -69,5 +69,11 @@
     </div>
 </div>
 
+<script>
+    document.getElementById('login-btn').addEventListener('click', function() {
+        window.location.href = '/login';
+    });
+</script>
+
 </body>
 </html>
