changes to advanced search

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -55,11 +55,11 @@
         </div>
         <div class="filter-section">
             <label class="filter-label">Rating</label>
-            <div>
-            <label class="rating-bar" for="slide">
-                <input id="slide" type="range" min="3.5" max="5.0" step="0.1">
-                <span class="slide-value"></span>
-            </label>
+            <div class="rating-container">
+                <label class="rating-bar" for="slide">
+                    <input id="slide" type="range" min="3.5" max="5.0" step="0.1" oninput="updateSlideValue(this.value)">
+                </label>
+                <span class="slide-value">3.5</span> <!-- Default value for display -->
             </div>
         </div>
         <div class="filter-section">
@@ -79,5 +79,6 @@
         window.location.href = '/login';
     });
 </script>
+<script src="home.js"></script>
 </body>
 </html>
