finished slider in advanced search - slider value is now updating correctly

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -57,7 +57,7 @@
             <label class="filter-label">Rating</label>
             <div class="rating-container">
                 <label class="rating-bar" for="slide">
-                    <input id="slide" type="range" min="3.5" max="5.0" step="0.1" oninput="updateSlideValue(this.value)">
+                    <input id="slide" type="range" min="0.0" max="5.0" step="0.1">
                 </label>
                 <span class="slide-value">3.5</span> <!-- Default value for display -->
             </div>
