added eventListeners in home & login

--- a/client/pages/login/login.html
+++ b/client/pages/login/login.html
@@ -14,7 +14,7 @@
 
 <header>
     <div class="logo-container">
-        <img class="logo" src="../../images/logo_full.png" alt="LiquorLoom Logo">
+        <img class="logo" id="logo" src="../../images/logo_full.png" alt="LiquorLoom Logo">
         <img class="logo-small" src="../../images/logo_small_orange.png" alt="LiquorLoom Logo Small">
     </div>
 </header>
@@ -28,5 +28,12 @@
     <br>
     <button type="submit">Login</button>
 </form>
+
+<script>
+    document.getElementById('logo').addEventListener('click', function() {
+        window.location.href = '/home';
+    });
+</script>
+
 </body>
 </html>
