--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -25,7 +25,7 @@
     </div>
     <div class="profile-container">
         <button class="button" id="login-btn">LOGIN</button>
-        <img class="profile-picture" src="../../images/profile_picture_empty.png" alt="Profile Picture">
+        <img class="profile-picture" id="profile-pic" src="../../images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
 <aside id="sidebar">
@@ -59,7 +59,7 @@
                 <label class="rating-bar" for="slide">
                     <input id="slide" type="range" min="0.0" max="5.0" step="0.1">
                 </label>
-                <span class="slide-value">3.5</span> <!-- Default value for display -->
+                <span class="slide-value">2.5</span> <!-- Default value for display -->
             </div>
         </div>
         <div class="filter-section">
@@ -78,6 +78,10 @@
     document.getElementById('login-btn').addEventListener('click', function() {
         window.location.href = '/login';
     });
+</script>
+<script>document.getElementById('profile-pic').addEventListener('click', function() {
+    window.location.href = '/profile';
+});
 </script>
 <script src="home.js"></script>
 </body>
