--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <title>Profile - LiquorLoom</title>
     <link rel="icon" type="image/png" href="../../images/logo_small_black.png">
+    <link rel="stylesheet" href="/client/base.css">
+    <link rel="stylesheet" href="/client/pages/profile/profile.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<label id="profile">This is my profile page</label>
+<header>
+    <div class="logo-container">
+        <img class="logo" id="logo" src="../../images/logo_full.png" alt="LiquorLoom Logo">
+        <img class="logo-small" src="../../images/logo_small_orange.png" alt="LiquorLoom Logo Small">
+    </div>
+    <div class="middle-container">
+        <label class="search-bar" for="search">
+            <input id="search">
+        </label>
+    </div>
+    <div class="profile-container">
+        <button class="button" id="logout-btn">LOGOUT</button>
+        <img class="profile-picture" id="profile-pic" src="../../images/profile_picture_empty.png" alt="Profile Picture">
+    </div>
+</header>
+<script>
+    document.getElementById('logo').addEventListener('click', function() {
+        window.location.href = '/home';
+    });
+</script>
 </body>
 </html>
