working on css/html of login

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -24,7 +24,7 @@
         </label>
     </div>
     <div class="profile-container">
-        <button class="button" id="login-btn">LOGIN</button>
+        <button class="header-btn" id="login-btn">LOGIN</button>
         <img class="profile-picture" src="../../images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
