--- a/client/pages/login/login.html
+++ b/client/pages/login/login.html
@@ -21,23 +21,24 @@
 </header>
 <main>
     <div class="element-border">
-    <form action="/login" method="POST" class="login">
-        <div class="element-container">
-            <label class="main-label" for="username">Username</label>
-            <div class="element-inner-container">
-                <input type="text" id="username" name="username" required>
+        <form action="/login" method="POST">
+            <div class="element-container">
+                <label class="main-label" for="username">Username</label>
+                <div class="element-inner-container">
+                    <input type="text" id="username" name="username" required>
+                </div>
             </div>
-        </div>
-        <div class="element-container">
-            <label class="main-label" for="password">Password</label>
-            <div class="element-inner-container">
-                <input type="password" id="password" name="password" required>
+            <div class="element-container">
+                <label class="main-label" for="password">Password</label>
+                <div class="element-inner-container">
+                    <input type="password" id="password" name="password" required>
+                </div>
             </div>
-        </div>
-        <div class="element-container">
-        <button type="submit">LOGIN</button>
-        </div>
-    </form>
+            <div class="element-container">
+                <button class="login-btn" type="submit">LOGIN</button>
+                <button class="header-btn">SIGN UP</button>
+            </div>
+        </form>
     </div>
 </main>
 </body>
