working on css/html of login & home

--- a/client/pages/login/login.html
+++ b/client/pages/login/login.html
@@ -34,7 +34,7 @@
                     <input type="password" id="password" name="password" required>
                 </div>
             </div>
-            <div class="element-container">
+            <div class="element-container btn-container">
                 <button class="login-btn" type="submit">LOGIN</button>
                 <button class="header-btn">SIGN UP</button>
             </div>
