--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -61,7 +61,7 @@
                 <label class="rating-bar" for="slide">
                     <input id="slide" type="range" min="0.0" max="5.0" step="0.1">
                 </label>
-                <span class="slide-value">2.5</span>
+                <span class="main-label slide-value">2.5</span>
             </div>
         </div>
         <div class="element-container">
