working on css/html of login & signup

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -80,10 +80,9 @@
     document.getElementById('login-btn').addEventListener('click', function() {
         window.location.href = '/login';
     });
-</script>
-<script>document.getElementById('profile-pic').addEventListener('click', function() {
+    document.getElementById('profile-pic').addEventListener('click', function() {
     window.location.href = '/profile';
-});
+    });
 </script>
 <script src="home.js"></script>
 </body>
