trying to implement connection between home page and allrecipes endpoint

--- a/client/pages/login/login.html
+++ b/client/pages/login/login.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script type="module" src="/client/pages/login/login.js"></script>
 </head>
 <body>
 
@@ -23,7 +24,7 @@
     <div class="element-border">
         <form action="/login" method="POST">
             <div class="element-container">
-                <label class="main-label" for="username">Username</label>
+                <label class="main-label" for="username">Username / Email</label>
                 <div class="element-inner-container">
                     <input type="text" id="username" name="username" required>
                 </div>
@@ -50,6 +51,5 @@
         window.location.href = '/signup';
     });
 </script>
-<script src="login.js"></script>
 </body>
 </html>
