--- a/client/pages/signup/signup.html
+++ b/client/pages/signup/signup.html
@@ -6,10 +6,11 @@
     <link rel="icon" type="image/png" href="../../images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
     <link rel="stylesheet" href="/client/pages/login/login.css">
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="/client/pages/signup/signup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script type="module" src="/client/pages/signup/signup.js"></script>
 </head>
 <body>
 
@@ -53,7 +54,6 @@
         </form>
     </div>
 </main>
-
 <script>
     document.getElementById('logo-container').addEventListener('click', function() {
         window.location.href = '/home';
@@ -62,7 +62,5 @@
         window.location.href = '/login';
     });
 </script>
-
-<script src="signup.js"></script>
 </body>
 </html>
