--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <div class="logo-container">
-        <img class="logo" src="../../images/logo_full.png" alt="LiquorLoom Logo">
+        <img class="logo" src="../../images/logo_full.png">
         <img class="logo-small" src="../../images/logo_small_orange.png" alt="LiquorLoom Logo Small">
     </div>
     <div class="middle-container">
@@ -25,13 +25,13 @@
     </div>
     <div class="profile-container">
         <button class="header-btn" id="login-btn">LOGIN</button>
-        <img class="profile-picture" id="profile-pic" src="../../images/profile_picture_empty.png" alt="Profile Picture">
+        <img class="profile-picture" id="profile-pic" src="../../images/profile_picture_empty.png">
     </div>
 </header>
 <aside id="sidebar">
     <div class="element-border">
         <div class="title-label">
-            <label>LABEL</label>
+            <label>FILTER</label>
         </div>
         <div class="element-container">
             <label class="main-label">Categories</label>
@@ -76,6 +76,16 @@
         </div>
     </div>
 </aside>
+<main>
+    <div class="element-border">
+        <div class="title-label">
+            <label>COCKTAILS</label>
+        </div>
+        <div class="cocktails-container">
+            <!-- Cocktail items will be dynamically appended here -->
+        </div>
+    </div>
+</main>
 <script>
     document.getElementById('login-btn').addEventListener('click', function() {
         window.location.href = '/login';
