--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -58,13 +58,10 @@
         <div class="element-container">
             <label class="main-label">Rating</label>
             <div class="element-inner-container rating-container">
-                <label class="rating-bar" for="min-slide">
-                    <input id="min-slide" type="range" min="0.0" max="5.0" step="0.1" value="0.0">
+                <label class="rating-bar" for="slide">
+                    <input id="slide" type="range" min="0.0" max="5.0" step="0.1">
                 </label>
-                <label class="rating-bar" for="max-slide">
-                    <input id="max-slide" type="range" min="0.0" max="5.0" step="0.1" value="5.0">
-                </label>
-                <span class="main-label slide-value">★ 0.0 - 5.0</span>
+                <span class="main-label slide-value">2.5</span>
             </div>
         </div>
         <div class="element-container">
