--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <div class="logo-container">
-        <img class="logo" src="../../images/logo_full.png">
+        <img class="logo" src="../../images/logo_full.png" alt="LiquorLoom Logo">
         <img class="logo-small" src="../../images/logo_small_orange.png" alt="LiquorLoom Logo Small">
     </div>
     <div class="middle-container">
