--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -22,7 +22,7 @@
         </label>
     </div>
     <div class="profile-container">
-        <button class="button" id="logout-btn">LOGOUT</button>
+        <button class="header-btn" id="logout-btn">LOGOUT</button>
         <img class="profile-picture" id="profile-pic" src="../../images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
