--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile - LiquorLoom</title>
-    <link rel="icon" type="image/png" href="../../images/logo_small_black.png">
+    <link rel="icon" type="image/png" href="/client/images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
     <link rel="stylesheet" href="/client/pages/profile/profile.css">
+    <script type="module" src="/client/base.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -13,8 +14,8 @@
 <body>
 <header>
     <div class="logo-container" id="logo-container">
-        <img class="logo" src="../../images/logo_full.png" alt="LiquorLoom Logo">
-        <img class="logo-small" src="../../images/logo_small_orange.png" alt="LiquorLoom Logo Small">
+        <img class="logo" src="/client/images/logo_full.png" alt="LiquorLoom Logo">
+        <img class="logo-small" src="/client/images/logo_small_orange.png" alt="LiquorLoom Logo Small">
     </div>
     <div class="middle-container">
         <label class="search-bar" for="search">
@@ -22,10 +23,42 @@
         </label>
     </div>
     <div class="profile-container">
-        <button class="header-btn" id="logout-btn">LOGOUT</button>
-        <img class="profile-picture" id="profile-pic" src="../../images/profile_picture_empty.png" alt="Profile Picture">
+        <button class="btn-normal-grey" id="logout-btn">LOGOUT</button>
+        <img class="profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
+<aside id="sidebar">
+    <div class="element-border">
+        <div class="title-label">
+            <label>FILTER</label>
+        </div>
+        <div class="element-container">
+            <label class="main-label">Categories</label>
+            <div class="element-inner-container tags">
+                <span class="tag">vodka</span>
+                <span class="tag">whiskey</span>
+                <span class="tag">beer</span>
+                <span class="tag">gin</span>
+                <span class="tag">wine</span>
+                <span class="tag">...</span>
+            </div>
+        </div>
+        <div class="element-container">
+            <label class="main-label" for="username">Username / Email</label>
+            <div class="element-inner-container">
+                <input class="element-input" type="text" id="username" name="username" required>
+            </div>
+        </div>
+        <div class="element-container">
+            <label class="main-label" for="password">Password</label>
+            <div class="element-inner-container">
+                <input class="element-input" type="password" id="password" name="password" required>
+            </div>
+        </div>
+    </div>
+</aside>
+<main>
+</main>
 <script>
     document.getElementById('logo-container').addEventListener('click', function() {
         window.location.href = '/home';
