added universal redirect & disabled unnecessary app.uses

--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - LiquorLoom</title>
     <link rel="icon" type="image/png" href="/client/images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
@@ -31,17 +32,6 @@
     <div class="element-border">
         <div class="title-label">
             <label>FILTER</label>
-        </div>
-        <div class="element-container">
-            <label class="main-label">Categories</label>
-            <div class="element-inner-container tags">
-                <span class="tag">vodka</span>
-                <span class="tag">whiskey</span>
-                <span class="tag">beer</span>
-                <span class="tag">gin</span>
-                <span class="tag">wine</span>
-                <span class="tag">...</span>
-            </div>
         </div>
         <div class="element-container">
             <label class="main-label" for="username">Username / Email</label>
