--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe - LiquorLoom</title>
-    <link rel="icon" type="image/png" href="../../images/logo_small_black.png">
+    <link rel="icon" type="image/png" href="/client/images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
     <script type="module" src="/client/base.js"></script>
     <link rel="stylesheet" href="/client/pages/recipe/recipe.css">
