--- a/client/pages/authentication/signup.html
+++ b/client/pages/authentication/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="icon" type="image/png" href="../../images/logo_small_black.png">
+    <link rel="icon" type="image/png" href="/client/images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
     <link rel="stylesheet" href="/client/pages/authentication/authentication.css">
     <link rel="stylesheet" href="/client/pages/authentication/signup.css">
