added rating to home & started profile css/html

--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -25,16 +25,16 @@
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="logout-btn">LOGOUT</button>
-        <img class="profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
+        <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
     </div>
 </header>
 <aside id="sidebar">
-    <div class="element-border">
-        <div class="title-label">
-            <label>FILTER</label>
+    <div class="element-border" id="profile-border">
+        <div class="profile-picture-container">
+            <img class="profile-picture" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
         </div>
         <div class="element-container">
-            <label class="main-label" for="username">Username / Email</label>
+            <label class="main-label" for="username">Username</label>
             <div class="element-inner-container">
                 <input class="element-input" type="text" id="username" name="username" required>
             </div>
