--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -25,7 +25,7 @@
     </div>
     <div class="profile-container">
         <button class="btn-normal-grey" id="login-btn">LOGIN</button>
-        <img class="profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png">
+        <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png">
     </div>
 </header>
 <aside id="sidebar">
