--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -35,6 +35,12 @@
             <label>FILTER</label>
         </div>
         <div class="element-container">
+            <div class="element-inner-container tags">
+                <span class="tag">alcoholic</span>
+                <span class="tag">non alcoholic</span>
+            </div>
+        </div>
+        <div class="element-container">
             <label class="main-label">Categories</label>
             <div class="element-inner-container tags">
                 <span class="tag">vodka</span>
