improved filter & added tag set functionality

--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -31,13 +31,10 @@
 </header>
 <aside id="sidebar">
     <div class="element-border">
-        <div class="title-label">
-            <label>FILTER</label>
-        </div>
         <div class="element-container">
             <div class="element-inner-container tags">
-                <span class="tag">alcoholic</span>
-                <span class="tag">non alcoholic</span>
+                <span class="tag" tag-set="1">alcoholic</span>
+                <span class="tag" tag-set="1">non alcoholic</span>
             </div>
         </div>
         <div class="element-container">
@@ -74,12 +71,15 @@
         <div class="element-container">
             <label class="main-label">Sort by</label>
             <div class="element-inner-container tags">
-                <span class="tag">asc</span>
-                <span class="tag">desc</span>
-                <span class="tag">trending</span>
-                <span class="tag">top rated</span>
-                <span class="tag">most popular</span>
+                <span class="tag" tag-set="2">asc</span>
+                <span class="tag" tag-set="2">desc</span>
+                <span class="tag" tag-set="3">trending</span>
+                <span class="tag" tag-set="3">top rated</span>
+                <span class="tag" tag-set="3">most popular</span>
             </div>
+        </div>
+        <div class="element-container btn-container">
+            <button class="btn-bold-orange">FILTER</button>
         </div>
     </div>
 </aside>
