handled undefined measurements in recipe.js & improved structure of css files

--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -42,10 +42,14 @@
                 <span class="tag" id="alcoholic"></span>
                 <span class="tag" id="glass"></span>
             </div>
-            <div class="main-label"><label>Ingredients</label></div>
-            <ul id="ingredients"></ul>
-            <div class="main-label"><label>Instructions</label></div>
-            <p id="instructions"></p>
+            <div class="title-label"><label>INGREDIENTS</label></div>
+            <div class="element-inner-container">
+                <span id="ingredients"></span>
+            </div>
+            <div class="title-label"><label>INSTRUCTIONS</label></div>
+            <div class="element-inner-container">
+                <span id="instructions"></span>
+            </div>
         </div>
     </div>
 </main>
